--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,6 +31,14 @@
             <!-- Birth Form -->
             <form id="baziForm" class="birth-form">
 
+                <!-- Name Input (for personalized report) -->
+                <div class="form-group">
+                    <label for="name">Your Name</label>
+                    <input type="text" id="name" name="name" 
+                        placeholder="e.g., Aleena (for personalized report title)" maxlength="50">
+                    <span class="hint">Optional - Used for report title</span>
+                </div>
+
                 <!-- Date Input -->
                 <div class="form-group">
                     <label for="birthDate">Birth Date</label>
